# mummy-backup

./: CMakeLists.txt  README.md
include/: agent.h  client.h  defines.h  server.h
src/: CMakeLists.txt  agent.c  client.c  client_main.c  main.c  server.c  server_main.c
tests/: CMakeLists.txt  agent.cc  dummy.cc  dummy_agent.cc  main.cc
